--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,13 @@
+# backend:
+#   name: git-gateway
+#   branch: master
+
 backend:
-  name: git-gateway
-  branch: master
+-  name: github
+-  repo: SebastianGolos/personal-site
+
+# +  name: github
+# +  repo: your-username/your-repo-name
 
 media_folder: "static/media"
 public_folder: "/media"
