--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,10 +1,10 @@
-# backend:
-#   name: git-gateway
-#   branch: master
-
 backend:
--  name: github
--  repo: SebastianGolos/personal-site
+  name: git-gateway
+  branch: master
+  repo: SebastianGolos/personal-site
+# backend:
+# -  name: github
+# -  repo: SebastianGolos/personal-site
 
 # +  name: github
 # +  repo: your-username/your-repo-name
